Wrap up and update readme if instructions
