# db/schema.rb
@@ -12,7 +12,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 20_230_722_232_908) do
+ActiveRecord::Schema[7.0].define(version: 20_230_723_193_937) do
   # These are extensions that must be enabled in order to support this database
   enable_extension 'plpgsql'
 
@@ -30,7 +30,7 @@ ActiveRecord::Schema[7.0].define(version: 20_230_722_232_908) do
     t.bigint 'author_id', null: false
     t.datetime 'created_at', null: false
     t.datetime 'updated_at', null: false
-    t.string 'cover_image_url'
+    t.string 'cover'
     t.index ['author_id'], name: 'index_books_on_author_id'
     t.index ['data'], name: 'index_books_on_data'
   end
